2017-06-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Consolidate <winuser.h> version specific conditionals.

	* include/winuser.h: Reorganize file content; group manifest constant
	definitions into one nested collection of conditional blocks, with one
	block per Windows version evolution; do likewise for type definitions
	and function prototypes which are always exposed, and separately...
	[! defined NOGDI]: ...for those which may be suppressed, when GDI
	support is not required.

2017-06-06  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Make <winuser.h> header effectively self-contained.

	* include/winuser.h (stdarg.h): Include it, in addition to...
	[NOGDI] (windef.h): ...this, directly or otherwise indirectly via...
	[!NOGDI] (wingdi.h): ...this, for effective self-containment.

2017-06-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Consolidate <wingdi.h> version specific conditionals.

	* include/wingdi.h: Reorganize file content; group manifest constant
	definitions into a single nested collection of conditional blocks, for
	those definitions which are common to both Win9x and WinNT, with one
	block per Windows version evolution, sorting alphabetically within
	each block; do likewise for additional manifest constant definitions
	which are specific to WinNT, and also for data type definitions and
	function prototypes.

2017-06-03  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Tidy, and make <wingdi.h> header effectively self-contained.

	* include/wingdi.h: Tidy layout; assert copyright.
	(windef.h): Include it; this achieves self-containment.
	[_BEGIN_C_DECLS, _END_C_DECLS]: Use them.
	[UNICODE vs. !UNICODE]: Discriminate generic symbol names, using...
	(__AW_ALIAS__): ...this, when defining each of...
	(DEVMODE, PDEVMODE, LPDEVMODE, DOCINFO, LPDOCINFO, LOGCOLORSPACE)
	(LOGFONT, PLOGFONT, LPLOGFONT, EXTLOGFONT, PEXTLOGFONT, LPEXTLOGFONT)
	(LPLOGCOLORSPACE, TEXTMETRIC, PTEXTMETRIC, LPTEXTMETRIC, GCP_RESULTS)